test/pointers_test/fail/maybe_null_visit_bad_not_null_handler.cpp
#include "marcpawl/pointers/ptr.hpp"

void fail()
{
    // Compile time failure expected
    // not null pointer handler
    marcpawl::pointers::maybe_null<int*> maybe(nullptr);
    auto null_handler = [](auto&&){};
    auto ptr_handler = [](int){};
    maybe.visit(null_handler, ptr_handler);
}
